# cmake_example_project_derive

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
core/: CMakeLists.txt  cmake_template_derive.c  cmake_template_derive.h  my_calc.c  my_calc.h
demo/: CMakeLists.txt  main.c
libs/: .gitignore  CMakeLists.txt  YayaLibLink.cmake  cmake_template_project
test/: CMakeLists.txt  main.c
using/: CMakeLists.txt  main.c
