## Author                 : Seityagiya Terlekchi
## Contacts               : terlekchi.seityaya@gmail.com
## Creation Date          :
## License Link           : https://spdx.org/licenses/LGPL-2.1-or-later.html
## SPDX-License-Identifier: LGPL-2.1-or-later
## Copyright © Seityagiya Terlekchi. All rights reserved.

cmake_minimum_required(VERSION 3.0)

project(cmake_template_derive_project)

add_subdirectory(core)
add_subdirectory(libs)
add_subdirectory(test)
add_subdirectory(demo)
